--- a/Pagina/css/custom.css
+++ b/Pagina/css/custom.css
@@ -108,11 +108,13 @@ padding: 8px 12px;
 #owl-demo .item{
 	margin: 4px;
 }
+/*
 #owl-demo .item img{
 	display: block;
 	width: 100%;
 	height: auto;
 }
+*/
 /* Footer */
 
 #footer{
