--- a/Pagina/css/general.css
+++ b/Pagina/css/general.css
@@ -327,7 +327,7 @@ html {
     padding-bottom: 50px;
     color: #f8f8f8;
     /*background: url(../img/intro/intro5.jpg) no-repeat center center;*/
-    background: url(../fondoX4.png) no-repeat center center;
+    background: url(../img/fondoX4.png) no-repeat center center;
     background-size: cover;
     text-align: center;
 }
